second corrections after review